@@ -119,6 +119,7 @@ public class TestCaseServiceTest implements ResourceUtil {
     measure.setMeasureName("MSR01");
     measure.setVersion(new Version(0, 0, 1));
     measure.setMeasureMetaData(MeasureMetaData.builder().draft(true).build());
+    measure.setActive(true); // ensure active for tests relying on active filter
   }
 
   @Test
@@ -126,7 +127,9 @@ public class TestCaseServiceTest implements ResourceUtil {
     ArgumentCaptor<Measure> measureCaptor = ArgumentCaptor.forClass(Measure.class);
     measure.setMeasureMetaData(MeasureMetaData.builder().draft(false).build());
     Optional<Measure> optional = Optional.of(measure);
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
 
     Mockito.doReturn(measure).when(measureRepository).save(any(Measure.class));
     when(testCaseValidationService.validateTestCaseAsResource(
@@ -178,7 +181,9 @@ public class TestCaseServiceTest implements ResourceUtil {
     measure.setTestCases(existingTestCases);
     ArgumentCaptor<Measure> measureCaptor = ArgumentCaptor.forClass(Measure.class);
     Optional<Measure> optional = Optional.of(measure);
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
 
     Mockito.doReturn(measure).when(measureRepository).save(any(Measure.class));
 
@@ -263,7 +268,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(testCases)
             .measureMetaData(MeasureMetaData.builder().draft(true).build())
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(existingMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(existingMeasure));
 
     doReturn(existingMeasure).when(measureRepository).save(any(Measure.class));
 
@@ -275,6 +281,7 @@ public class TestCaseServiceTest implements ResourceUtil {
   public void testUpdateTestCaseValidResourcesWithReportMeasureNotFound() {
     final String measureId = "M1234";
     final String accessToken = "Bearer Token";
+    // updateTestCaseValidResourcesWithReport still uses findById (no active filter)
     when(measureRepository.findById(anyString())).thenReturn(Optional.empty());
 
     MeasureTestCaseValidationReport output =
@@ -302,6 +309,7 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(null)
             .model(ModelType.QI_CORE.getValue())
             .build();
+    // Method under test uses findById
     when(measureRepository.findById(anyString())).thenReturn(Optional.of(measure));
 
     MeasureTestCaseValidationReport output =
@@ -331,6 +339,7 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(List.of())
             .model(ModelType.QI_CORE.getValue())
             .build();
+    // Method under test uses findById
     when(measureRepository.findById(anyString())).thenReturn(Optional.of(measure));
 
     MeasureTestCaseValidationReport output =
@@ -384,6 +393,7 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(prevTestCases)
             .model(ModelType.QI_CORE.getValue())
             .build();
+    // Method under test uses findById
     when(measureRepository.findById(anyString())).thenReturn(Optional.of(measure));
 
     // TestCaseService spy = Mockito.spy(testCaseService);
@@ -519,7 +529,7 @@ public class TestCaseServiceTest implements ResourceUtil {
     String measureId = measure.getId();
     String username = "user01";
     String accessToken = "Bearer Token";
-    when(measureRepository.findById(anyString())).thenReturn(Optional.empty());
+    when(measureRepository.findByIdAndActive(anyString(), eq(true))).thenReturn(Optional.empty());
 
     assertThrows(
         ResourceNotFoundException.class,
@@ -571,7 +581,8 @@ public class TestCaseServiceTest implements ResourceUtil {
     String username = "user01";
     String accessToken = "Bearer Token";
     measure.getMeasureMetaData().setDraft(false);
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(measure));
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
         .thenAnswer(invocation -> invocation.getArgument(0, TestCase.class));
@@ -639,7 +650,8 @@ public class TestCaseServiceTest implements ResourceUtil {
     String measureId = measure.getId();
     String username = "user01";
     String accessToken = "Bearer Token";
-    when(measureRepository.findById(eq(measureId))).thenReturn(Optional.of(measure));
+    when(measureRepository.findByIdAndActive(eq(measureId), eq(true)))
+        .thenReturn(Optional.of(measure));
 
     List<TestCase> output =
         testCaseService.persistTestCases(newTestCases, measureId, username, accessToken);
@@ -676,7 +688,8 @@ public class TestCaseServiceTest implements ResourceUtil {
     String measureId = measure.getId();
     String username = "user01";
     String accessToken = "Bearer Token";
-    when(measureRepository.findById(eq(measureId))).thenReturn(Optional.of(measure));
+    when(measureRepository.findByIdAndActive(eq(measureId), eq(true)))
+        .thenReturn(Optional.of(measure));
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
         .thenAnswer(invocation -> invocation.getArgument(0, TestCase.class));
@@ -724,7 +737,8 @@ public class TestCaseServiceTest implements ResourceUtil {
 
     measure.setMeasureMetaData(MeasureMetaData.builder().draft(false).build());
 
-    when(measureRepository.findById(eq(measureId))).thenReturn(Optional.of(measure));
+    when(measureRepository.findByIdAndActive(eq(measureId), eq(true)))
+        .thenReturn(Optional.of(measure));
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
         .thenAnswer(
@@ -777,7 +791,9 @@ public class TestCaseServiceTest implements ResourceUtil {
   public void testPersistTestCaseSucceedsForNonDraftMeasure() {
     measure.setMeasureMetaData(MeasureMetaData.builder().draft(false).build());
     Optional<Measure> optional = Optional.of(measure);
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
         .thenAnswer(invocation -> invocation.getArgument(0, TestCase.class));
@@ -797,7 +813,9 @@ public class TestCaseServiceTest implements ResourceUtil {
   public void testFindTestCasesByMeasureId() {
     measure.setTestCases(List.of(testCase));
     Optional<Measure> optional = Optional.of(measure);
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
     List<TestCase> persistTestCase = testCaseService.findTestCasesByMeasureId(measure.getId());
     assertEquals(1, persistTestCase.size());
     assertEquals(testCase.getId(), persistTestCase.get(0).getId());
@@ -806,7 +824,9 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   public void testFindTestCasesByMeasureIdWhenMeasureDoesNotExist() {
     Optional<Measure> optional = Optional.empty();
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
     assertThrows(
         ResourceNotFoundException.class,
         () -> testCaseService.findTestCasesByMeasureId(measure.getId()));
@@ -1275,7 +1295,9 @@ public class TestCaseServiceTest implements ResourceUtil {
   public void testGetTestCaseReturnsTestCaseById() {
     Optional<Measure> optional =
         Optional.of(measure.toBuilder().testCases(Arrays.asList(testCase)).build());
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
     TestCase output =
         testCaseService.getTestCase(measure.getId(), testCase.getId(), false, "TOKEN");
     assertEquals(testCase, output);
@@ -1294,7 +1316,9 @@ public class TestCaseServiceTest implements ResourceUtil {
 
     Optional<Measure> optional =
         Optional.of(measure.toBuilder().testCases(Arrays.asList(testCase)).build());
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
     TestCase output = testCaseService.getTestCase(measure.getId(), testCase.getId(), true, "TOKEN");
     assertNotNull(output.getHapiOperationOutcome());
     assertEquals(200, output.getHapiOperationOutcome().getCode());
@@ -1304,7 +1328,7 @@ public class TestCaseServiceTest implements ResourceUtil {
   public void testGetTestCaseThrowsNotFoundExceptionForMeasureWithEmptyListTestCases() {
     Mockito.doReturn(Optional.of(measure.toBuilder().testCases(Lists.emptyList()).build()))
         .when(measureRepository)
-        .findById(any(String.class));
+        .findByIdAndActive(any(String.class), eq(true));
     assertThrows(
         ResourceNotFoundException.class,
         () -> testCaseService.getTestCase(measure.getId(), testCase.getId(), false, "TOKEN"));
@@ -1314,7 +1338,7 @@ public class TestCaseServiceTest implements ResourceUtil {
   public void testGetTestCaseThrowsNotFoundExceptionForMeasureWithNullTestCases() {
     Mockito.doReturn(Optional.of(measure.toBuilder().testCases(null).build()))
         .when(measureRepository)
-        .findById(any(String.class));
+        .findByIdAndActive(any(String.class), eq(true));
     assertThrows(
         ResourceNotFoundException.class,
         () -> testCaseService.getTestCase(measure.getId(), testCase.getId(), false, "TOKEN"));
@@ -1328,7 +1352,7 @@ public class TestCaseServiceTest implements ResourceUtil {
             TestCase.builder().id("TC2_ID").title("TC2").build());
     Mockito.doReturn(Optional.of(measure.toBuilder().testCases(testCases).build()))
         .when(measureRepository)
-        .findById(any(String.class));
+        .findByIdAndActive(any(String.class), eq(true));
     assertThrows(
         ResourceNotFoundException.class,
         () -> testCaseService.getTestCase(measure.getId(), testCase.getId(), false, "TOKEN"));
@@ -1348,7 +1372,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(testCases)
             .measureMetaData(MeasureMetaData.builder().draft(true).build())
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(existingMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(existingMeasure));
 
     doReturn(existingMeasure).when(measureRepository).save(any(Measure.class));
 
@@ -1370,7 +1395,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(testCases)
             .measureMetaData(MeasureMetaData.builder().draft(false).build())
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(existingMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(existingMeasure));
 
     doReturn(existingMeasure).when(measureRepository).save(any(Measure.class));
 
@@ -1392,7 +1418,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(testCases)
             .measureMetaData(MeasureMetaData.builder().draft(false).build())
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(existingMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(existingMeasure));
     assertThrows(
         InvalidIdException.class,
         () -> testCaseService.deleteTestCases("measure-id", List.of("TC1_ID"), "test.user"));
@@ -1416,7 +1443,27 @@ public class TestCaseServiceTest implements ResourceUtil {
   void testDeleteTestCaseReturnsExceptionForNullTestCaseId() {
     assertThrows(
         InvalidIdException.class,
-        () -> testCaseService.deleteTestCases("measure-id", Collections.emptyList(), "OtherUser"));
+        () -> testCaseService.deleteTestCase("measure-id", "", "OtherUser"));
+  }
+
+  @Test
+  void testDeleteTestCaseReturnsExceptionForTestCaseNotFound() {
+    List<TestCase> testCases =
+        List.of(
+            TestCase.builder().id("TC1_ID").title("TC1").build(),
+            TestCase.builder().id("TC2_ID").title("TC2").build());
+    final Measure measure =
+        Measure.builder()
+            .id("measure-id")
+            .createdBy("OtherUser")
+            .testCases(testCases)
+            .measureMetaData(MeasureMetaData.builder().draft(true).build())
+            .build();
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(measure));
+    assertThrows(
+        InvalidIdException.class,
+        () -> testCaseService.deleteTestCase("measure-id", "testCaseId", "OtherUser"));
   }
 
   @Test
@@ -1427,7 +1474,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .createdBy("OtherUser")
             .measureMetaData(MeasureMetaData.builder().draft(true).build())
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(measure));
     doThrow(new UnauthorizedException("Measure", "measure-id", "user2"))
         .when(measureService)
         .verifyAuthorization(anyString(), any(Measure.class));
@@ -1452,7 +1500,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .testCases(null)
             .measureMetaData(MeasureMetaData.builder().draft(true).build())
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(existingMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(existingMeasure));
 
     assertThrows(
         InvalidIdException.class,
@@ -1478,7 +1527,7 @@ public class TestCaseServiceTest implements ResourceUtil {
 
   @Test
   void testDeleteTestCasesShouldThrowResourceNotFoundExceptionWhenMeasureIsNotFound() {
-    when(measureRepository.findById(anyString())).thenReturn(Optional.empty());
+    when(measureRepository.findByIdAndActive(anyString(), eq(true))).thenReturn(Optional.empty());
 
     assertThrows(
         ResourceNotFoundException.class,
@@ -1490,7 +1539,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void testDeleteTestCasesThrowsInvalidDraftStateException() {
     measure.getMeasureMetaData().setDraft(false);
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     assertThrows(
         InvalidIdException.class,
@@ -1502,7 +1552,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void testDeleteTestCasesThrowsExceptionWhenMeasureDoesNotContainAnyTestCases() {
     measure.setTestCases(List.of());
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     assertThrows(
         InvalidIdException.class,
@@ -1521,7 +1572,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             TestCase.builder().id("TC4_ID").title("TC4").build());
 
     measure.setTestCases(testCases);
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(measure));
     doReturn(measure).when(measureRepository).save(any(Measure.class));
 
     String output =
@@ -1540,7 +1592,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             TestCase.builder().id("TC4_ID").title("TC4").build());
 
     measure.setTestCases(testCases);
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(measure));
     doReturn(measure).when(measureRepository).save(any(Measure.class));
 
     String output =
@@ -1559,7 +1612,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void importTestCasesReturnValidOutcomes() throws JsonProcessingException {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setJson(testCaseImportWithMeasureReport);
@@ -1592,7 +1646,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   void importTestCasesExistingWithExportMetaDataReturnValidOutcomes()
       throws JsonProcessingException {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setJson(testCaseImportWithMeasureReport);
@@ -1631,7 +1686,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void importTestCasesReturnValidOutcomeWithAnyExceptionsWhileUpdatingTestCases() {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     doThrow(new ResourceNotFoundException("Measure", measure.getId()))
         .when(testCaseService)
@@ -1659,7 +1715,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void importTestCasesReturnValidOutcomeWithAnyDefaultExceptionsWhileUpdatingTestCases() {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     doThrow(new NullPointerException())
         .when(testCaseService)
@@ -1688,7 +1745,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void importTestCasesReturnInvalidOutcomeWithSpecificExceptionMsgWhileUpdatingTestCases() {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     doThrow(new DuplicateTestCaseNameException())
         .when(testCaseService)
@@ -1718,7 +1776,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   void importTestCaseReturnValidOutComeWithJsonParseException() {
     var importedJson = "{\n" + "    \"resourceType\": \"Bundle\",\n" + "}";
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     var testCaseImportRequest =
         TestCaseImportRequest.builder()
@@ -1744,7 +1803,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void importTestCaseReturnValidOutComeWithExceptionWhenJsonIsNull() {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     var testCaseImportRequest =
         TestCaseImportRequest.builder().patientId(testCase.getPatientId()).json(null).build();
@@ -1765,7 +1825,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void importTestCaseReturnInvalidOutComeWithExceptionWhenJsonIsEmpty() {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     var testCaseImportRequest =
         TestCaseImportRequest.builder().patientId(testCase.getPatientId()).json("").build();
@@ -1786,7 +1847,8 @@ public class TestCaseServiceTest implements ResourceUtil {
   @Test
   void importTestCasesReturnValidOutcomesWithMultipleFilesPerPatient() {
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setJson(testCaseImportWithMeasureReport);
@@ -1843,7 +1905,8 @@ public class TestCaseServiceTest implements ResourceUtil {
     measure.setGroups(List.of(group));
 
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setJson(testCaseImportWithMeasureReport);
@@ -1900,7 +1963,8 @@ public class TestCaseServiceTest implements ResourceUtil {
     List<TestCase> testCases = new ArrayList<>();
     testCases.add(testCase);
     measure.setTestCases(testCases);
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
     when(measureService.findMeasureById(anyString())).thenReturn(measure);
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
@@ -1980,7 +2044,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .build();
     measure.setGroups(List.of(group));
 
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setJson(testCaseImportWithMeasureReport);
@@ -2022,7 +2087,9 @@ public class TestCaseServiceTest implements ResourceUtil {
     measure.setGroups(List.of(group));
 
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    measure.setActive(true);
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setJson(testCaseImportWithMeasureReport);
@@ -2065,7 +2132,9 @@ public class TestCaseServiceTest implements ResourceUtil {
     measure.setGroups(List.of(group));
 
     measure.setTestCases(List.of(testCase));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    measure.setActive(true);
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setJson(testCaseImportWithMeasureReport);
@@ -2089,7 +2158,9 @@ public class TestCaseServiceTest implements ResourceUtil {
 
   @Test
   void importTestCasesDoesNotCreateNewNoGivenName() throws IOException {
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    measure.setActive(true);
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
     String testCaseImportWithoutGivenName =
         removeGivenNameFromJson(testCaseImportWithMeasureReport);
     var testCaseImportRequest =
@@ -2195,7 +2266,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .stratifications(List.of(strat))
             .build();
     qdmMeasure.setGroups(List.of(group));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(qdmMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(qdmMeasure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setDescription(qdmTestCaseDescription);
@@ -2256,7 +2328,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .stratifications(List.of(strat))
             .build();
     qdmMeasure.setGroups(List.of(group));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(qdmMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(qdmMeasure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setDescription(qdmTestCaseDescription);
@@ -2316,7 +2389,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .stratifications(List.of(strat))
             .build();
     qdmMeasure.setGroups(List.of(group));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(qdmMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(qdmMeasure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setDescription(qdmTestCaseDescription);
@@ -2373,7 +2447,8 @@ public class TestCaseServiceTest implements ResourceUtil {
             .build();
     Group group2 = group1.toBuilder().id("2").build();
     qdmMeasure.setGroups(List.of(group1, group2));
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(qdmMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(qdmMeasure));
 
     TestCase updatedTestCase = testCase;
     updatedTestCase.setDescription(qdmTestCaseDescription);
@@ -2506,7 +2581,9 @@ public class TestCaseServiceTest implements ResourceUtil {
     measure.setModel(ModelType.QDM_5_6.getValue());
     ArgumentCaptor<Measure> measureCaptor = ArgumentCaptor.forClass(Measure.class);
     Optional<Measure> optional = Optional.of(measure);
-    Mockito.doReturn(optional).when(measureRepository).findById(any(String.class));
+    Mockito.doReturn(optional)
+        .when(measureRepository)
+        .findByIdAndActive(any(String.class), eq(true));
 
     Mockito.doReturn(measure).when(measureRepository).save(any(Measure.class));
 
@@ -2567,7 +2644,8 @@ public class TestCaseServiceTest implements ResourceUtil {
 
   @Test
   void importTestCasesDoesNotCreateNewTitleOrGroupHasSpecialCharacters() throws IOException {
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
     String patientId = UUID.randomUUID().toString();
     String json =
         "{\"qdmVersion\": \"5.6\",\n"
@@ -2599,7 +2677,8 @@ public class TestCaseServiceTest implements ResourceUtil {
 
   @Test
   void importTestCasesDoesNotCreateNewTitleMissing() throws IOException {
-    when(measureRepository.findById(anyString())).thenReturn(Optional.ofNullable(measure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.ofNullable(measure));
     String patientId = UUID.randomUUID().toString();
     String json =
         "{\"qdmVersion\": \"5.6\",\n"
@@ -2937,7 +3016,8 @@ public class TestCaseServiceTest implements ResourceUtil {
                         .build()))
             .measureMetaData(metaData)
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(targetMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(targetMeasure));
     when(measureService.findMeasureById(anyString())).thenReturn(targetMeasure);
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
@@ -3038,7 +3118,8 @@ public class TestCaseServiceTest implements ResourceUtil {
                                     .build()))
                         .build()))
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(targetMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(targetMeasure));
     when(measureService.findMeasureById(anyString())).thenReturn(targetMeasure);
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
@@ -3091,7 +3172,8 @@ public class TestCaseServiceTest implements ResourceUtil {
     TestCase source = testCase.deepCopy().toBuilder().id(null).build();
     assertThat(targetMeasure.getTestCases().size(), is(1));
 
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(targetMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(targetMeasure));
     when(measureService.findMeasureById(anyString())).thenReturn(targetMeasure);
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
@@ -3173,7 +3255,8 @@ public class TestCaseServiceTest implements ResourceUtil {
                             List.of(Stratification.builder().id("target-strat-id").build()))
                         .build()))
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(targetMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(targetMeasure));
     when(measureService.findMeasureById(anyString())).thenReturn(targetMeasure);
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
@@ -3271,7 +3354,8 @@ public class TestCaseServiceTest implements ResourceUtil {
                                     .build()))
                         .build()))
             .build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(targetMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(targetMeasure));
     when(measureService.findMeasureById(anyString())).thenReturn(targetMeasure);
     when(testCaseValidationService.validateTestCaseAsResource(
             any(TestCase.class), any(ModelType.class), anyString()))
@@ -3311,7 +3395,8 @@ public class TestCaseServiceTest implements ResourceUtil {
     TestCase source = testCase.deepCopy().toBuilder().json(testCaseImportQdm).build();
 
     Measure targetMeasure = measure.toBuilder().model(ModelType.QDM_5_6.getValue()).build();
-    when(measureRepository.findById(anyString())).thenReturn(Optional.of(targetMeasure));
+    when(measureRepository.findByIdAndActive(anyString(), eq(true)))
+        .thenReturn(Optional.of(targetMeasure));
     when(measureService.findMeasureById(anyString())).thenReturn(targetMeasure);
     doReturn(targetMeasure).when(measureRepository).save(any());
 
